# slack_rss_bulk_add

./: pyproject.toml
slack_rss/: feeds.txt  post_subscribe.py
