[tool.poetry]
name = "slack-rss"
version = "0.1.0"
description = ""
authors = ["Adam Grandt <adam.grandt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
